Fix backlink and download links colliding on mobile

--- a/src/_includes/style.css
+++ b/src/_includes/style.css
@@ -146,3 +146,9 @@ a:visited {
     flex-direction: row;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 600px) {
+    .resume-header {
+        flex-direction: column;
+    }
+}
